# cocotbext-ams

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/tutorial/: Makefile  adc.sv  comp.sp  gen_waveform.py  index.md  pwm_dac.sp  pwm_dac_stub.sv  pwm_gen.sv  rc_filter.sp  sar_controller.sv  tb_pwm_dac.sv  test_pwm_dac.py
examples/pll/: Makefile  pll.sp  pll_stub.sv  tb_pll.sv  test_pll.py
examples/sar_adc/: Makefile  sar_adc.sp  sar_adc_stub.sv  tb_sar_adc.sv  test_sar_adc.py
src/cocotbext/: __init__.py
src/cocotbext/ams/: __init__.py  _bridge.py  _netlist.py  _ngspice.py  _pins.py  _simulator.py  _vcd.py
tests/: test_netlist.py  test_pins.py  test_vcd.py
