[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cocotbext-ams"
version = "0.0.1"
description = "ngspice bridge for cocotb — open-source mixed-signal co-simulation"
requires-python = ">=3.10"
license = "BSD-3-Clause"
dependencies = [
    "cocotb>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
