[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cocotbext-ams"
version = "0.1.0"
description = "Analog simulator bridge for cocotb — open-source mixed-signal co-simulation (ngspice, Xyce)"
requires-python = ">=3.10"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Framework :: cocotb",
]
dependencies = [
    "cocotb>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
